--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					</div>
 					<div>
 						<h4><span>Competitive Code Repositories</span></h4>
-						<span class="sb-toggle"><a href="https://github.com/holladbbworld">HackerRank Competitive Coding</a></span>
+						<span class="sb-toggle"><a href="https://github.com/holladworld">HackerRank Competitive Coding</a></span>
 						<img src="../images/github-512.png">
 																	
 					</div>
